RESOLVED FIXED69582
Write barrier shouldn't allocate temporaries inside control flow
https://bugs.webkit.org/show_bug.cgi?id=69582
Summary Write barrier shouldn't allocate temporaries inside control flow
Oliver Hunt
Reported 2011-10-06 16:39:25 PDT
Write barrier shouldn't allocate temporaries inside control flow
Attachments
Patch (2.06 KB, patch)
2011-10-06 16:40 PDT, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2011-10-06 16:40:17 PDT
Oliver Hunt
Comment 2 2011-10-06 16:57:50 PDT
Note You need to log in before you can comment on or make changes to this bug.