Write barrier shouldn't allocate temporaries inside control flow https://bugs.webkit.org/show_bug.cgi?id=69582

Reviewed by Gavin Barraclough.

Reorder the code to avoid spill-related badness.

* dfg/DFGJITCodeGenerator.cpp:
(JSC::DFG::JITCodeGenerator::writeBarrier):

Canonical link: https://commits.webkit.org/85633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96875 268f45cc-cd09-0410-ab3c-d52691b4dbfc